--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,42 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+html, body {
+    color: white;
+    font-family: Helvetica, Arial, sans-serif;
+    font-size: 1.5rem;
+    padding: 3%;
+    text-align: center;
+    
+
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+h2{
+    font-size: 3.5rem;
+}
+
+button {
+    font-size: 1rem;
+    padding: 3%;
+    margin: 1%;
+    border-radius: 15px;
+    border: solid 2px black;
+    font-weight: bold;
+    color: white;
+    cursor: pointer;
+}
+
+html{
+    background: url(./img/awp.png) fixed center/cover;
+    height: 450px;
+    position: relative;
+}
+
+.b{
+    background-color: cornflowerblue;
+}
+
+.br{
+    background-color: peru;
+}
+
+button:hover{
+    box-shadow: 0 0 5px white;
 }
